# ros2_practice

./: .gitignore
install/: local_setup.sh  setup.sh
install/minimal_comp/share/minimal_comp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minimal_parameter_class/lib/minimal_parameter_class/: minimal_parameter_client_test  minimal_parameter_holder_test
install/minimal_parameter_class/share/minimal_parameter_class/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/minimal_parameter_class/share/minimal_parameter_class/cmake/: minimal_parameter_classConfig-version.cmake  minimal_parameter_classConfig.cmake
install/minimal_parameter_class/share/minimal_parameter_class/environment/: ament_prefix_path.dsv  path.dsv
install/my_messages/share/my_messages/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/my_messages/share/my_messages/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_messages__rosidl_typesupport_fastrtps_cExport.cmake  my_messagesConfig-version.cmake  my_messagesConfig.cmake  my_messages__rosidl_typesupport_cExport.cmake  my_messages__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_messages/share/my_messages/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/my_messages/share/my_messages/msg/: TwoInts.idl  TwoInts.msg
install/my_messages/share/my_messages/srv/: CalcTwoFloats.idl  CalcTwoFloats.srv  CalcTwoFloats_Request.msg  CalcTwoFloats_Response.msg
install/my_msg_class/lib/my_msg_class/: my_pub_test  my_sub_test
install/my_msg_class/share/my_msg_class/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/my_msg_class/share/my_msg_class/cmake/: my_msg_classConfig-version.cmake  my_msg_classConfig.cmake
install/my_msg_class/share/my_msg_class/environment/: ament_prefix_path.dsv  path.dsv
install/my_srv_class/lib/my_srv_class/: clnt_test  srv_test
install/my_srv_class/share/my_srv_class/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_srv_class/share/my_srv_class/cmake/: my_srv_classConfig-version.cmake  my_srv_classConfig.cmake
minimal_comp/: CMakeLists.txt  package.xml
minimal_comp/include/minimal_comp/: minimal_comp_node1.hpp  visibility_control.h
minimal_comp/src/: minimal_comp_node1.cpp
minimal_parameter_class/: CMakeLists.txt  package.xml
minimal_parameter_class/src/: minimal_param_client.cpp  minimal_param_client.hpp  minimal_param_client_main.cpp  minimal_parameter_holder.cpp  minimal_parameter_holder.hpp  minimal_parameter_holder_main.cpp
my_messages/: CMakeLists.txt
my_messages/srv/: CalcTwoFloats.srv
my_msg_class/: CMakeLists.txt  package.xml
my_msg_class/install/: local_setup.sh  setup.sh
my_msg_class/install/my_msg_class/share/my_msg_class/: package.bash  package.zsh
my_msg_class/src/: my_pub.cpp  my_pub.hpp  my_pub_main.cpp  my_sub.cpp  my_sub.hpp  my_sub_main.cpp
my_srv_class/: CMakeLists.txt  package.xml
my_srv_class/install/: local_setup.sh  setup.sh
my_srv_class/install/my_srv_class/share/my_srv_class/: package.bash  package.zsh
my_srv_class/src/: my_clnt.cpp  my_clnt.hpp  my_clnt_main.cpp  my_srv.cpp  my_srv.hpp  my_srv_main.cpp
(+53 files in other folders)
